<resources>
    <string name="app_name" translatable="false">Multiplayer Reversi</string>
    <string name="local_1v1">Local</string>
    <string name="remote">Remote</string>
    <string name="notYetImplemented">Not yet implemented</string>
    <string name="now_playing">Now playing:</string>
    <string name="use_bomb_piece">Use bomb piece</string>
    <string name="use_trade_piece">Use pieces trade</string>
    <string name="light_piece">Light</string>
    <string name="dark_piece">Dark</string>
    <string name="save_changes">Save Changes</string>
    <string name="press_to_change_profile_image">Press to change profile image</string>
    <string name="name">Name</string>
    <string name="join_another_game">Join another game</string>
    <string name="start_game">Start Game</string>
    <string name="players_waiting">Players Waiting:</string>
    <string name="enter_address">Enter address</string>
    <string name="cancel">Cancel</string>
    <string name="join">Join</string>
    <string name="failed_to_connect">Failed to connect to address</string>
    <string name="already_used_trade_move">You have already used the trade move</string>
    <string name="already_used_bomb_piece">You have already used the bomb</string>
    <string name="save">Save</string>
    <string name="need_to_setup_user">Need to setup user to play online</string>
    <string name="waiting_area">Waiting Room</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="waiting_for_host">Waiting for host</string>
    <string name="question_leave_without_save">Do you want to leave without saving?</string>
    <string name="save_and_leave">Save and leave</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="history">History</string>
    <string name="host_exited">Host left</string>
    <string name="need_wifi">Need to be connected to Wifi</string>
    <string name="pass">Pass</string>
    <string name="winner">Winner</string>
    <string name="score">Score:</string>
    <string name="opponent_s">Opponent/s</string>
    <string name="ok" translatable="false">OK</string>
    <string name="draw">Draw</string>
    <string name="room_address">Room Address:</string>
    <string name="you_had_no_possible_moves">You had no possible plays, so you were passed</string>
    <string name="exit_game">Exit Game</string>
    <string name="ask_leave_game">Are you sure you want to leave the game?</string>
    <string name="game_interrupted">Game Interrupted</string>
    <string name="ask_keep_locally">Do you want to continue playing locally on this device?</string>
    <string name="players">Players:</string>
    <string name="sign_out">Sign out</string>
    <string name="about">About</string>
    <string name="name_is_invalid">User name is invalid</string>
    <string name="best_score">Best score:</string>
    <string name="amov_2021_2022" translatable="false">AMOV 2021/2022</string>
    <string name="about_us">About us:</string>
    <string name="rodrigo_mendes_n2019114072" translatable="false">Rodrigo Mendes\n2019114072</string>
    <string name="dorin_bosii_n2019112586" translatable="false">Dorin Bosii\n2019112586</string>
    <string name="show_possible_moves">Show possible moves</string>
    <string name="your_name">Your name:</string>
    <string name="need_to_setup_user_history">Need to signin to see history</string>

</resources>