<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:layout_gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="center"
        android:textColor="@color/dark_orange"
        android:textSize="30sp"
        android:layout_marginVertical="20dp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amov_2021_2022"
        android:layout_gravity="center"
        android:textColor="@color/dark_orange"
        android:textSize="20sp"
        android:layout_marginVertical="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_us"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:layout_marginVertical="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rodrigo_mendes_n2019114072"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="25dp"
        android:layout_marginVertical="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dorin_bosii_n2019112586"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="25dp"
        android:layout_marginVertical="10dp"/>

</LinearLayout>