<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LauncherActivity">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:src="@drawable/logo" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_margin="20dp" />

    <ImageView
        android:id="@+id/avatarIcon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="top|end"
        android:layout_margin="20dp"
        android:src="@drawable/avatar_icon"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:orientation="vertical"
        android:padding="32dp">

        <Button
            android:id="@+id/btnLocal"
            style="@style/MainMenuBtn"
            android:text="@string/local_1v1" />

        <Button
            android:id="@+id/btnRemote"
            style="@style/MainMenuBtn"
            android:text="@string/remote" />

        <Button
            android:id="@+id/btnHistory"
            style="@style/MainMenuBtn"
            android:text="@string/history" />

    </LinearLayout>
</FrameLayout>