<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.EditProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical"
        android:paddingTop="40dp">

        <ImageButton
            android:id="@+id/imgBtnProfileChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:minWidth="200dp"
            android:minHeight="200dp"
            android:maxHeight="200dp"
            android:maxWidth="200dp"
            android:src="@drawable/avatar_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/press_to_change_profile_image"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <EditText
            android:id="@+id/etNameChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:autofillHints="name"
            android:background="@drawable/square_border"
            android:hint="@string/name"
            android:maxLines="1"
            android:maxLength="25"
            android:paddingStart="20dp"
            android:text=""
            android:textSize="26sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSaveChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:text="@string/save_changes"
        android:textSize="25sp"
        android:textStyle="bold" />

</FrameLayout>